<resources>
    <string name="fcr_room_class_time_away">Class will start in：</string>
    <string name="fcr_room_class_started">Class has started:</string>
    <string name="fcr_room_class_not_start">Class has not started yet</string>
    <string name="fcr_room_class_end_warning">This session will end in %s minutes</string>
    <string name="fcr_room_class_leave_class_title">Do you want to end this session?</string>
    <string name="fcr_room_class_leave_cancel">Cancel</string>
    <string name="fcr_room_class_leave_sure">Confirm</string>
    <string name="fcr_room_class_over_notice">Classroom notification</string>
    <string name="fcr_room_class_over">The class has ended.</string>
    <string name="fcr_room_close_warning">The class will be over in %s minutes.</string>
    <string name="fcr_room_exit_warning">Class is not end, Are you sure you want to quit the classroom?</string>
    <string name="fcr_vocational_teacher_absent">The teacher is not in the classroom</string>
    <string name="fcr_vocational_video_start_early_alert">Are you sure to start lessons in advance and play videos</string>
    <string name="fcr_room_leave_room">Leave the classroom</string>
    <string name="fcr_room_loading">Loading...</string>
    <string name="fcr_room_one_to_one_title">One-to-One Classroom</string>
    <string name="fcr_room_one_to_one_tab_video">Video</string>
    <string name="fcr_room_one_to_one_tab_chat">Chat</string>
    <string name="fcr_room_start_class">Start the class</string>
    <string name="fcr_room_small_title">Interactive Small Classroom</string>
    <string name="fcr_room_lecture_title">Lecture Hall</string>
    <string name="fcr_room_room_name">Room Name</string>
    <string name="fcr_room_invite_link">Invite Link</string>
    <string name="fcr_room_room_link_student">Copy Link</string>
    <string name="fcr_tool_box_cloud_storage">Cloud storage</string>
    <string name="fcr_tool_box_record_class">Record</string>
    <string name="fcr_tool_box_poll">Poll</string>
    <string name="fcr_tool_box_count_down">Countdown</string>
    <string name="fcr_tool_box_popup_quiz">Pop-up Quiz</string>
    <string name="fcr_stream_stop_video">The teacher has turned off your camera.</string>
    <string name="fcr_stream_stop_audio">You are muted.</string>
    <string name="fcr_stream_start_video">The teacher has turned on your camera.</string>
    <string name="fcr_stream_start_audio">You are unmuted.</string>
    <string name="fcr_media_camera">Camera</string>
    <string name="fcr_media_mic">Microphone</string>
    <string name="fcr_media_speaker">Speaker</string>
    <string name="fcr_media_camera_direction">Direction</string>
    <string name="fcr_media_camera_direction_front">Front</string>
    <string name="fcr_media_camera_direction_back">Back</string>
    <string name="fcr_user_hands">Raise your hand by holding this button.</string>
    <string name="fcr_user_kick_out">Remove students</string>
    <string name="fcr_user_kick_out_once">Remove the student from the classroom</string>
    <string name="fcr_user_kick_out_forever">Ban the student from re-entering the classroom</string>
    <string name="fcr_user_kick_out_submit">Confirm</string>
    <string name="fcr_user_kick_out_cancel">Cancel</string>
    <string name="fcr_user_local_kick_out_notice">Removal notification</string>
    <string name="fcr_user_local_kick_out">You have been removed from the classroom.</string>
    <string name="fcr_user_local_start_co_hosting">You are on stage now,You are in presentation mode now. Please feel free to interact with others.</string>
    <string name="fcr_user_local_stop_co_hosting">You are off the stage now.</string>
    <string name="fcr_user_congratulation">%s has been rewarded by the teacher.</string>
    <string name="fcr_user_list">Roster</string>
    <string name="fcr_user_list_teacher_name">Teacher:</string>
    <string name="fcr_user_list_carousel_setting">Video Carousel</string>
    <string name="fcr_user_list_student_name">Student</string>
    <string name="fcr_user_list_stage">Stage</string>
    <string name="fcr_user_list_auth">Auth</string>
    <string name="fcr_user_list_video">Camera</string>
    <string name="fcr_user_list_audio">Microphone</string>
    <string name="fcr_user_list_reward">Reward</string>
    <string name="fcr_user_list_ban">Remove</string>
    <string name="fcr_user_dialog_class_destroy_title">Tips</string>
    <string name="fcr_user_loading">loading</string>
    <string name="fcr_user_waiting_student">Waiting for students to enter the classroom</string>
    <string name="fcr_user_waiting_tutor">Waiting for the teacher to enter the classroom</string>
    <string name="fcr_user_student_left">The student has left the classroom</string>
    <string name="fcr_user_tutor_left">The teacher has left the classroom</string>
    <string name="fcr_board_slide_retry">course load failure, retry now.</string>
    <string name="fcr_board_slide_retry_failure">course load failure, please load next page or reopen.</string>
    <string name="fcr_netless_board_granted">You can now annotate on the whiteboard.</string>
    <string name="fcr_netless_board_ungranted">Your access to the whiteboard has been revoked by the teacher.</string>
    <string name="fcr_monitor_network_disconnected">You are disconnected from the internet. Please check your network connection.</string>
    <string name="fcr_monitor_network_reconnecting">reconnecting...</string>
    <string name="fcr_monitor_login_remote_device">You are logged in on another device</string>
    <string name="fcr_monitor_network_poor">Unstable network connection. Please check your local network connection.</string>
    <string name="fcr_popup_quiz">Popup quiz answerer</string>
    <string name="fcr_popup_quiz_post">Submit the answer</string>
    <string name="fcr_popup_quiz_change">Change My Answer</string>
    <string name="fcr_popup_quiz_submission">Submitted</string>
    <string name="fcr_popup_quiz_accuracy">Accuracy</string>
    <string name="fcr_popup_quiz_correct">The correct Answer</string>
    <string name="fcr_popup_quiz_my_answer">My Answer</string>
    <string name="fcr_popup_quiz_start_again">restart</string>
    <string name="fcr_popup_quiz_answer_time">Time elapsed</string>
    <string name="fcr_popup_quiz_start_answer">Start the quiz</string>
    <string name="fcr_popup_quiz_end_answer">End the quiz</string>
    <string name="fcr_popup_quiz_student_name">Name</string>
    <string name="fcr_popup_quiz_student_answer">Answer</string>
    <string name="fcr_poll_title">Poll</string>
    <string name="fcr_poll_submit">Submit</string>
    <string name="fcr_poll_multi">Multi select</string>
    <string name="fcr_poll_single">Single select</string>
    <string name="fcr_poll_start">Start</string>
    <string name="fcr_poll_input_placeholder">Please input the question</string>
    <string name="fcr_poll_input_option">Please input choices</string>
    <string name="fcr_poll_vote_title">Create polling</string>
    <string name="fcr_countdown_timer_title">Countdown timer</string>
    <string name="fcr_tool_box_start">Start</string>
    <string name="fcr_tool_box_unit_second">(second)</string>
    <string name="fcr_cloud_file_name">File Name</string>
    <string name="fcr_cloud_search">Search</string>
    <string name="fcr_cloud_public_resource">Public folder</string>
    <string name="fcr_cloud_private_resource">Private folder</string>
    <string name="fcr_cloud_total_item">%s items</string>
    <string name="fcr_hyphenate_im_chat">Chat</string>
    <string name="fcr_hyphenate_im_announcement">Notice</string>
    <string name="fcr_hyphenate_im_teacher">Teacher</string>
    <string name="fcr_hyphenate_im_assistant">Assistant</string>
    <string name="fcr_hyphenate_im_no_message">No Message</string>
    <string name="fcr_hyphenate_im_no_announcement">no announcement</string>
    <string name="fcr_hyphenate_im_all_mute">All Muted</string>
    <string name="fcr_hyphenate_im_mute">You are muted by the teacher</string>
    <string name="fcr_hyphenate_im_login_faild">Login failed</string>
    <string name="fcr_hyphenate_im_join_faild">Failed to join the classroom</string>
    <string name="fcr_hyphenate_im_send_faild_by_mute">You have been muted by the teacher</string>
    <string name="fcr_hyphenate_im_send_faild_by_sensitive">Failed to send the message, as it contains sensitive words.</string>
    <string name="fcr_hyphenate_im_login_on_other_device">The account was logged in on another device</string>
    <string name="fcr_hyphenate_im_logout_forced">The account was logged out.</string>
    <string name="fcr_hyphenate_im_teacher_remove_message">The teacher deleted a message</string>
    <string name="fcr_hyphenate_im_teacher_mute_all">The teacher muted all the students.</string>
    <string name="fcr_hyphenate_im_teacher_unmute_all">The teacher unmuted all the students.</string>
    <string name="fcr_hyphenate_im_recall">Recall</string>
    <string name="fcr_hyphenate_im_recall_a_message">Recall a message</string>
    <string name="fcr_hyphenate_im_muted_by_teacher">You are muted by teacher %s</string>
    <string name="fcr_hyphenate_im_unmuted_by_teacher">You are unmuted by teacher %s</string>
    <string name="fcr_hyphenate_im_photo_permission_disabled">Failed to gain access to the album</string>
    <string name="fcr_hyphenate_im_image_too_large">The image file is too large to load. Please choose another one.</string>
    <string name="fcr_hyphenate_im_notice_cancel">Cancel</string>
    <string name="fcr_hyphenate_im_notice_send">Publish</string>
    <string name="fcr_hyphenate_im_notice_up_to">Up to 500 characters</string>
    <string name="fcr_hyphenate_im_no_announcement_teacher">There is no announcement for now. Go to publish it</string>
    <string name="fcr_hyphenate_im_login_chat_failed">Login chat failed</string>
    <string name="fcr_hyphenate_im_appKey_is_empty">AppKey is empty</string>
    <string name="fcr_hyphenate_im_words_out_of_limit">Words out of limit</string>
    <string name="fcr_hyphenate_im_release_announcement_failed">Release announcement failed</string>
    <string name="fcr_hyphenate_im_mute_title">Mute</string>
    <string name="fcr_hyphenate_im_nickname">Nickname</string>
    <string name="fcr_hyphenate_im_student">Student</string>
    <string name="fcr_hyphenate_im_message">Message</string>
    <string name="fcr_hyphenate_im_enter_contents">Please enter message</string>
    <string name="fcr_hyphenate_im_send">Send</string>
    <string name="fcr_hyphenate_im_join_chat_room_failed">Join chatroom failed</string>
    <string name="fcr_hyphenate_im_fetch_token_failed">Fetch IM token failed</string>
    <string name="fcr_settings_logoff_detail">Unfortunately，Flexible Classroom is not able to continue serving you.Thank you.\n
Delete your account will result in ….\n
1.Delete the room data associated with the account\n
2.delete account and mobile</string>
    <string name="fcr_settings_close_account">Delete Account</string>
    <string name="fcr_settings_logoff_agreenment">I have read and confirmed to delete my account</string>
    <string name="fcr_settings_logoff_submit">Confirm</string>
    <string name="fcr_settings_option_general_language_simplified">简体中文</string>
    <string name="fcr_settings_option_general_language_english">English</string>
    <string name="fcr_settings_option_region_na">NA</string>
    <string name="fcr_settings_option_region_ap">AP</string>
    <string name="fcr_settings_option_region_cn">CN</string>
    <string name="fcr_settings_option_region_eu">EU</string>
    <string name="fcr_settings_label_language">Language</string>
    <string name="fcr_settings_label_region">Region</string>
    <string name="fcr_inshare_button_share_friends">Share to Friends</string>
    <string name="fcr_inshare_label_share">Share</string>
    <string name="fcr_inshare_label_invitation">Invitation:</string>
    <string name="fcr_inshare_label_room_id">Room ID:</string>
</resources>