<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fcr_white"
    tools:context=".setting.FcrTestRoomActivity">

    <RelativeLayout
        android:id="@+id/fcr_theme_switch_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fcr_white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/ic_back_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/fcr_settings_close_account"
            android:textColor="@color/fcr_black"
            android:textSize="@dimen/sp_17" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/iv_back"
            android:background="#EEEEF7" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_logout_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@+id/fcr_theme_switch_head"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/fcr_settings_logoff_detail"
        android:textSize="16sp" />


    <CheckBox
        android:id="@+id/terms_logout"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/tv_logout_alert"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:checked="false"
        android:gravity="center"
        android:text="@string/fcr_settings_logoff_agreenment"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp"
        android:theme="@style/fcrCheckBox" />

    <TextView
        android:id="@+id/tv_fcr_delete_account"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/fcr_logout_btn_bg"
        android:gravity="center"
        android:text="@string/fcr_settings_logoff_submit"
        android:textColor="#357BF6"
        android:textSize="@dimen/dp_16" />

</RelativeLayout>


