<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/fcr_margin_normal"
    >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        >
        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/fcr_avatar_size"
            android:layout_height="@dimen/fcr_avatar_size"
            android:layout_marginEnd="@dimen/fcr_margin_normal"
            android:src="@mipmap/fcr_default_avatar"
            />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="@dimen/fcr_nickName_max_width"
            android:textSize="@dimen/fcr_textSize"
            android:text="@string/fcr_hyphenate_im_nickname"
            android:textStyle="bold"
            android:textColor="@color/fcr_text_level1_color"
            android:ellipsize="end"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fcr_margin_normal"
            android:textSize="@dimen/fcr_minSp"
            android:text="@string/fcr_hyphenate_im_teacher"
            android:theme="@style/normal_role_bg_style"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/tv_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fcr_margin_normal"
            android:textSize="@dimen/fcr_minSp"
            android:text="@string/fcr_hyphenate_im_mute_title"
            android:theme="@style/mute_bg_style"
            android:paddingStart="5dp"
            android:visibility="gone"
            android:paddingEnd="5dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="@dimen/fcr_textSize"
        android:text="@string/fcr_hyphenate_im_message"
        android:padding="@dimen/fcr_margin_normal"
        android:layout_marginTop="@dimen/fcr_margin_normal"
        android:background="@drawable/fcr_recv_msg_bg"
        android:textColor="@color/fcr_text_level1_color"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_toEndOf="@+id/tv_content"
        android:layout_alignTop="@+id/tv_content"
        android:layout_marginEnd="5dp"
        android:layout_width="20dp"
        android:layout_height="20dp"/>
    <ImageView
        android:id="@+id/resend"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:layout_toEndOf="@+id/tv_content"
        android:layout_alignTop="@+id/tv_content"
        android:src="@mipmap/fcr_icon_resend"
        android:visibility="invisible"
        />

</RelativeLayout>