<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fcr_white"
    tools:context=".setting.FcrTestRoomActivity">

    <RelativeLayout
        android:id="@+id/fcr_rl_language_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fcr_white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_16"
            android:src="@drawable/ic_back_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/fcr_settings_label_language"
            android:textColor="@color/fcr_black"
            android:textSize="@dimen/sp_17" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/iv_back"
            android:background="#EEEEF7" />


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fcr_rl_language_setting"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/fcr_rg_language_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_language_zh"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/btn_title_bg_selector"
                android:button="@null"
                android:drawableEnd="@drawable/fcr_icon_select"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_20"
                android:text="@string/fcr_settings_option_general_language_simplified" />

            <RadioButton
                android:id="@+id/rb_language_en"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/btn_title_bg_selector"
                android:button="@null"
                android:checked="true"
                android:drawableEnd="@drawable/fcr_icon_select"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_20"
                android:text="@string/fcr_settings_option_general_language_english" />

<!--            <RadioButton-->
<!--                android:id="@+id/rb_language_zh_tw"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="52dp"-->
<!--                android:background="@drawable/btn_title_bg_selector"-->
<!--                android:button="@null"-->
<!--                android:checked="true"-->
<!--                android:drawableEnd="@drawable/fcr_icon_select"-->
<!--                android:paddingStart="@dimen/dp_16"-->
<!--                android:paddingEnd="@dimen/dp_20"-->
<!--                android:text="@string/fcr_settings_option_general_language_traditional" />-->
        </RadioGroup>
    </RelativeLayout>


</RelativeLayout>


